Use feature flags for most global settings

--- a/m4d/appsettings.Development.json
+++ b/m4d/appsettings.Development.json
@@ -20,6 +20,10 @@
     "indexname": "songs-test"
   },
   "FeatureManagement": {
-    "ActivityLogging": true
+    "ActivityLogging": true,
+    "Captcha": false,
+    "GoogleTagManager": false,
+    "GoogleTags": false,
+    "UsageLogging": true
   }
 }
