Add a reminder alert to ask users to upgrae to premium

--- a/m4d/appsettings.Development.json
+++ b/m4d/appsettings.Development.json
@@ -22,6 +22,7 @@
   "FeatureManagement": {
     "ActivityLogging": true,
     "Captcha": false,
+    "CustomerReminder": true,
     "GoogleTagManager": false,
     "GoogleTags": false,
     "UsageLogging": true
