Clean up SongIndexCode and Scaffold ExperimentalSongIndex

--- a/m4d/appsettings.json
+++ b/m4d/appsettings.json
@@ -21,6 +21,10 @@
     "endpoint": "https://music4dance.search.windows.net",
     "indexname": "songs-test"
   },
+  "SongIndexExperimental": {
+    "endpoint": "https://music4dance.search.windows.net",
+    "indexname": "songs-experimental"
+  },
   "PageIndex": {
     "endpoint": "https://m4d.search.windows.net",
     "indexname": "pages"
