--- a/m4d/Properties/launchSettings.json
+++ b/m4d/Properties/launchSettings.json
@@ -26,6 +26,16 @@
         "ASPNETCORE_VITE": "true"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "m4d-experimental": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SEARCHINDEX": "SongIndexExperimental",
+        "ASPNETCORE_VITE": "true"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   },
   "iisSettings": {
