--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageVersion Include="AspNet.Security.OAuth.Spotify" Version="9.3.0" />
     <PackageVersion Include="AutoMapper" Version="14.0.0" />
+    <PackageVersion Include="Azure.Communication.Email" Version="1.0.1" />
     <PackageVersion Include="Azure.Identity" Version="1.13.2" />
     <PackageVersion Include="Azure.Search.Documents" Version="11.6.0" />
     <PackageVersion Include="coverlet.collector" Version="6.0.4" />
