More current/next fixes + drive more from appsettings

--- a/m4d/appsettings.json
+++ b/m4d/appsettings.json
@@ -13,13 +13,21 @@
   "AppConfig": {
     "Endpoint": "https://music4dance.azconfig.io"
   },
-  "SongIndex": {
+  "SongIndexProd-1": {
     "endpoint": "https://music4dance.search.windows.net",
     "indexname": "songs-prod"
   },
-  "SongIndexTest": {
+  "SongIndexProd-2": {
+    "endpoint": "https://music4dance.search.windows.net",
+    "indexname": "songs-prod-2"
+  },
+  "SongIndexTest-1": {
     "endpoint": "https://music4dance.search.windows.net",
     "indexname": "songs-test"
+  },
+  "SongIndexTest-2": {
+    "endpoint": "https://music4dance.search.windows.net",
+    "indexname": "songs-test-2"
   },
   "SongIndexExperimental": {
     "endpoint": "https://music4dance.search.windows.net",
