--- a/m4d/Properties/launchSettings.json
+++ b/m4d/Properties/launchSettings.json
@@ -36,6 +36,17 @@
         "ASPNETCORE_VITE": "true"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "m4d-next": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SEARCHINDEX": "SongIndexTest",
+        "ASPNETCORE_VITE": "true",
+        "SEARCHINDEXVERSION": "2"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   },
   "iisSettings": {
