--- a/m4d/ClientApp/package.json
+++ b/m4d/ClientApp/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "yarn type-check && yarn build-only",
     "full-build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
