--- a/m4d/Properties/launchSettings.json
+++ b/m4d/Properties/launchSettings.json
@@ -12,8 +12,7 @@
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
-        "SEARCHINDEX": "SongIndexTest",
-        "LOCALHOST": ""
+        "SEARCHINDEX": "SongIndexTest"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
