Some improvements to logging infrastructure

--- a/m4d/appsettings.Development.json
+++ b/m4d/appsettings.Development.json
@@ -2,9 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information",
-      "System": "Warning",
-      "Microsoft": "Warning"
+      "Microsoft": "Warning",
+      "System": "Warning"
     }
   },
   "Vite": {
