--- a/m4d/appsettings.json
+++ b/m4d/appsettings.json
@@ -3,7 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "System": "Warning"
     }
   },
   "AllowedHosts": "*",
@@ -40,6 +40,7 @@
   "Vite": {
     "Base": "vclient",
     "PackageManager": "yarn",
-    "PackageDirectory": "ClientApp"
+    "PackageDirectory": "ClientApp",
+    "IgnoreMissingAssets": true
   }
 }
