Commit changes before fixing errors.

--- a/m4dModels/m4dModels.csproj
+++ b/m4dModels/m4dModels.csproj
@@ -19,4 +19,4 @@
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLibrary.csproj" />
   </ItemGroup>
-</Project></Project>
+</Project>
