--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -42,14 +42,10 @@
     <PackageReference Include="SixLabors.ImageSharp" />
     <PackageReference Include="Stripe.net" />
     <PackageReference Include="System.Drawing.Common" />
-    <PackageReference Include="System.ServiceModel.Duplex" />
-    <PackageReference Include="System.ServiceModel.Http" />
-    <PackageReference Include="System.ServiceModel.NetTcp" />
-    <PackageReference Include="System.ServiceModel.Primitives" />
-    <PackageReference Include="System.ServiceModel.Security" />
     <PackageReference Include="UAParser" />
     <PackageReference Include="Vite.AspNetCore" />
     <PackageReference Include="X.PagedList.Mvc.Core" />
+    <PackageReference Include="Microsoft.Build" VersionOverride="17.11.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DanceLib\DanceLibrary.csproj" />
