Update config package versions to 10.0.0
Upgraded Microsoft.Extensions.Configuration and its Abstractions from version 9.0.9 to 10.0.0 in Directory.Packages.props. Also added Microsoft.Extensions.Configuration.EnvironmentVariables with VersionOverride 10.0.0 to m4d.Tests.csproj. These changes ensure consistency and compatibility with the latest configuration package versions.

--- a/m4d.Tests/m4d.Tests.csproj
+++ b/m4d.Tests/m4d.Tests.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Stripe.net" />
     <PackageReference Include="Vite.AspNetCore" />
     <PackageReference Include="X.PagedList.Mvc.Core" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" VersionOverride="10.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\m4d\m4d.csproj" />
