Update CI/CD pipelines to use .NET 10 SDK
- Updated GitHub Actions workflow to use dotnet-version 10.x

- Updated all Azure Pipelines to install .NET 10 SDK using UseDotNet@2 task

- Fixes NETSDK1045 error in CI builds

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -30,8 +30,10 @@ steps:
     workingDirectory: m4d/ClientApp/
 
   - task: UseDotNet@2
+    displayName: "Install .NET 10 SDK"
     inputs:
-      version: 9.x
+      packageType: "sdk"
+      version: "10.x"
 
   - script: dotnet build --configuration $(buildConfiguration)
     displayName: "dotnet build $(buildConfiguration)"
