--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,12 @@ variables:
   buildConfiguration: "Release"
 
 steps:
+  - task: UseDotNet@2
+    displayName: "Install .NET 10 SDK"
+    inputs:
+      packageType: "sdk"
+      version: "10.x"
+
   - task: NodeTool@0
     inputs:
       versionSpec: "22.x"
