--- a/azure-pipelines-server.yml
+++ b/azure-pipelines-server.yml
@@ -13,6 +13,12 @@ variables:
   buildConfiguration: "Release"
 
 steps:
+  - task: UseDotNet@2
+    displayName: "Install .NET 10 SDK"
+    inputs:
+      packageType: "sdk"
+      version: "10.x"
+
   - task: DotNetCoreCLI@2
     displayName: dotnet restore
     inputs:
