--- a/azure-pipelines-test-self-contained.yml
+++ b/azure-pipelines-test-self-contained.yml
@@ -10,6 +10,12 @@ variables:
   BuildConfiguration: 'Release'
 
 steps:
+- task: UseDotNet@2
+  displayName: "Install .NET 10 SDK"
+  inputs:
+    packageType: "sdk"
+    version: "10.x"
+
 - script: dotnet build --configuration $(BuildConfiguration)
   displayName: 'dotnet build $(BuildConfiguration)'
 
