--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -39,10 +39,10 @@ steps:
     displayName: "dotnet build $(buildConfiguration)"
 
   - task: DotNetCoreCLI@2
-    displayName: publish web project
+    displayName: publish web project (self-contained)
     inputs:
       command: "publish"
-      arguments: "--configuration $(buildConfiguration)"
+      arguments: "--configuration $(buildConfiguration) --runtime linux-x64 --self-contained true"
       publishWebProjects: true
 
   - task: AzureWebApp@1
