--- a/m4d/Properties/launchSettings.json
+++ b/m4d/Properties/launchSettings.json
@@ -46,6 +46,17 @@
         "SEARCHINDEXVERSION": "3"
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
+    "m4d-spotify": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SEARCHINDEX": "SongIndexTest",
+        "ASPNETCORE_VITE": "true",
+        "DISABLE_HTTPS_REDIRECT": "true"
+      },
+      "applicationUrl": "http://127.0.0.1:5000"
     }
   },
   "iisSettings": {
