--- a/azure-pipelines-release.yml
+++ b/azure-pipelines-release.yml
@@ -42,7 +42,7 @@ steps:
     displayName: publish web project (self-contained)
     inputs:
       command: "publish"
-      arguments: "--configuration $(buildConfiguration) --runtime linux-x64 --self-contained true"
+      arguments: "--configuration $(buildConfiguration) --runtime linux-x64"
       publishWebProjects: true
 
   - task: AzureWebApp@1
