--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,7 +1,11 @@
-# ASP.NET Core
+# ASP.NET Core - Production Hosted (Framework-Dependent)
+# LEGACY: Consider using azure-pipelines-deploy.yml with parameters instead
 # Build and test ASP.NET Core projects targeting .NET Core.
 # Add steps that run tests, create a NuGet package, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
+#
+# This pipeline deploys to: msc4dnc (Production)
+# Deployment mode: Framework-Dependent (requires .NET runtime on host)
 
 pool:
   vmImage: ubuntu-latest
