--- a/azure-pipelines-self-contained.yml
+++ b/azure-pipelines-self-contained.yml
@@ -46,7 +46,7 @@ steps:
     displayName: publish web project (self-contained)
     inputs:
       command: "publish"
-      arguments: "--configuration $(buildConfiguration) --runtime linux-x64 --self-contained true"
+      arguments: "--configuration $(buildConfiguration) --runtime linux-x64 --self-contained true /p:SelfContained=true"
       publishWebProjects: true
 
   - task: AzureWebApp@1
