--- a/m4d/Properties/launchSettings.json
+++ b/m4d/Properties/launchSettings.json
@@ -47,6 +47,16 @@
       },
       "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
+    "m4d-prod-db": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "SEARCHINDEX": "SongIndexProd",
+        "ASPNETCORE_VITE": "true"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+    },
     "m4d-spotify": {
       "commandName": "Project",
       "launchBrowser": true,
