--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -116,12 +116,7 @@ steps:
       appName: "$(appName)"
       package: "$(System.DefaultWorkingDirectory)/**/*.zip"
       startUpCommand: "/home/site/wwwroot/m4d"
-      appSettings: |
-        -SELF_CONTAINED_DEPLOYMENT true
-        -ASPNETCORE_ENVIRONMENT $(aspnetEnvironment)
-        -SEARCHINDEX $(searchIndex)
-        -SEARCHINDEXVERSION $(searchIndexVersion)
-        -WEBSITES_INCLUDE_CLOUD_CERTS true
+      appSettings: "SELF_CONTAINED_DEPLOYMENT=true ASPNETCORE_ENVIRONMENT=$(aspnetEnvironment) SEARCHINDEX=$(searchIndex) SEARCHINDEXVERSION=$(searchIndexVersion) WEBSITES_INCLUDE_CLOUD_CERTS=true"
 
   # Framework-Dependent Deployment
   - task: AzureWebApp@1
@@ -133,9 +128,4 @@ steps:
       appName: "$(appName)"
       package: "$(System.DefaultWorkingDirectory)/**/*.zip"
       startUpCommand: "dotnet m4d.dll"
-      appSettings: |
-        -SELF_CONTAINED_DEPLOYMENT false
-        -ASPNETCORE_ENVIRONMENT $(aspnetEnvironment)
-        -SEARCHINDEX $(searchIndex)
-        -SEARCHINDEXVERSION $(searchIndexVersion)
-        -WEBSITES_INCLUDE_CLOUD_CERTS true
+      appSettings: "SELF_CONTAINED_DEPLOYMENT=false ASPNETCORE_ENVIRONMENT=$(aspnetEnvironment) SEARCHINDEX=$(searchIndex) SEARCHINDEXVERSION=$(searchIndexVersion) WEBSITES_INCLUDE_CLOUD_CERTS=true"
