--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -116,34 +116,7 @@ steps:
       appName: "$(appName)"
       package: "$(System.DefaultWorkingDirectory)/**/*.zip"
       startUpCommand: "/home/site/wwwroot/m4d"
-      appSettings: |
-        [
-          {
-            "name": "SELF_CONTAINED_DEPLOYMENT",
-            "value": "true",
-            "slotSetting": false
-          },
-          {
-            "name": "ASPNETCORE_ENVIRONMENT",
-            "value": "$(aspnetEnvironment)",
-            "slotSetting": false
-          },
-          {
-            "name": "SEARCHINDEX",
-            "value": "$(searchIndex)",
-            "slotSetting": false
-          },
-          {
-            "name": "SEARCHINDEXVERSION",
-            "value": "$(searchIndexVersion)",
-            "slotSetting": false
-          },
-          {
-            "name": "WEBSITES_INCLUDE_CLOUD_CERTS",
-            "value": "true",
-            "slotSetting": false
-          }
-        ]
+      appSettings: '[{"name":"SELF_CONTAINED_DEPLOYMENT","value":"true","slotSetting":false},{"name":"ASPNETCORE_ENVIRONMENT","value":"$(aspnetEnvironment)","slotSetting":false},{"name":"SEARCHINDEX","value":"$(searchIndex)","slotSetting":false},{"name":"SEARCHINDEXVERSION","value":"$(searchIndexVersion)","slotSetting":false},{"name":"WEBSITES_INCLUDE_CLOUD_CERTS","value":"true","slotSetting":false}]'
 
   # Framework-Dependent Deployment
   - task: AzureWebApp@1
@@ -155,31 +128,4 @@ steps:
       appName: "$(appName)"
       package: "$(System.DefaultWorkingDirectory)/**/*.zip"
       startUpCommand: "dotnet m4d.dll"
-      appSettings: |
-        [
-          {
-            "name": "SELF_CONTAINED_DEPLOYMENT",
-            "value": "false",
-            "slotSetting": false
-          },
-          {
-            "name": "ASPNETCORE_ENVIRONMENT",
-            "value": "$(aspnetEnvironment)",
-            "slotSetting": false
-          },
-          {
-            "name": "SEARCHINDEX",
-            "value": "$(searchIndex)",
-            "slotSetting": false
-          },
-          {
-            "name": "SEARCHINDEXVERSION",
-            "value": "$(searchIndexVersion)",
-            "slotSetting": false
-          },
-          {
-            "name": "WEBSITES_INCLUDE_CLOUD_CERTS",
-            "value": "true",
-            "slotSetting": false
-          }
-        ]
+      appSettings: '[{"name":"SELF_CONTAINED_DEPLOYMENT","value":"false","slotSetting":false},{"name":"ASPNETCORE_ENVIRONMENT","value":"$(aspnetEnvironment)","slotSetting":false},{"name":"SEARCHINDEX","value":"$(searchIndex)","slotSetting":false},{"name":"SEARCHINDEXVERSION","value":"$(searchIndexVersion)","slotSetting":false},{"name":"WEBSITES_INCLUDE_CLOUD_CERTS","value":"true","slotSetting":false}]'
